--- a/авито/Index.html
+++ b/авито/Index.html
@@ -19,6 +19,17 @@
   <a class="authr" href="###">Авторизация </a>
  </nav>
  </header>
+ <main class="MAINER">
+ <button class="btn1"Click me!></button>
+ <button class="btn2"МатросАвто></button>
+ </main>
+ <footer class="FOOTER">
+ <a class=""href="#">О компании</a>
+ <a href="##">Безопастность</a>
+ <a href="###">Реклама</a>
+ <a href="####">Карьера</a>
+ <a href="#####">Авито журнал</a>
+ </footer>
  </body>
  
  </html>
